test/error/parse/ExpectDo.mod
MODULE ExpectDo;
BEGIN
  WHILE TRUE END;
END ExpectDo.
